--- a/Thesis/abstract.tex
+++ b/Thesis/abstract.tex
@@ -28,29 +28,29 @@ de meest gebruikte online service, met miljoenen zoekopdrachten per dag. Naast h
 in teksten, groeit de aandacht voor zogenaamde multimedia zoeksystemen. 
 
 In het bijzonder maken de internetgebruikers steeds meer gebruik van zoekmachines die toelaten om 
-gigantische collecties van afbeeldingen te doorzoeken. Deze zoekmachines zijn echter nagenoeg 
+gigantische collecties van beelden te doorzoeken. Deze zoekmachines zijn echter nagenoeg 
 allemaal tekst-gebaseerd. Dit houdt in dat het zoeken enkel steunt op het vergelijken van opgegeven 
-trefwoorden met tekstuele annotaties die toegekend worden aan elke afbeelding. Het hoeft geen
+trefwoorden met tekstuele annotaties die toegekend worden aan elk beeld. Het hoeft geen
 betoog dat het voor de gebruiker niet altijd gemakkelijk is om op deze manier een aanvaardbaar 
 resultaat te vinden. Bovendien worden deze annotaties grotendeels automatisch gegenereerd, 
 waardoor ze vaak weinig relevant zijn.
 
 De hierboven genoemde problemen kunnen opgelost worden door het zoeken te baseren op de inhoud 
-van de afbeeldingen. De bestaande inhoud-gebaseerde systemen kunnen echter nog altijd niet 
-toegepast worden op afbeeldingencollecties van dergelijke grote omvang. In deze scriptie geven 
+van de beelden. De bestaande inhoud-gebaseerde systemen kunnen echter nog altijd niet 
+toegepast worden op beeldencollecties van dergelijke grote omvang. In deze scriptie geven 
 we daarom een alternatief voor deze meer geavanceerde zoeksystemen, waarbij de grootte van 
 de te doorzoeken collectie geen probleem vormt. 
 
 Dit alternatief kan gezien worden als een uitbreiding van de tekst-gebaseerde zoeksystemen.
 De zoekactie begint nog steeds met het specifi\"eren van \'e\'en of meerdere trefwoorden, waarop
-het systeem antwoordt met een lijst van relevante afbeeldingen. We zorgen er nu echter voor
-dat de gebruiker een aantal voorbeeld-afbeeldingen kan kiezen uit deze lijst, waarna het
+het systeem antwoordt met een lijst van relevante beelden. We zorgen er nu echter voor
+dat de gebruiker een aantal voorbeeld-beelden kan kiezen uit deze lijst, waarna het
 systeem de zoekresultaten rangschikt op een manier die de gelijkenis met de voorbeelden uitbuit.
 
-Voor het modelleren van de graduele gelijkenis tussen afbeeldingen, maken we gebruik van 
+Voor het modelleren van de graduele gelijkenis tussen beelden, maken we gebruik van 
 vaagsimilariteitsmaten. Daarnaast zullen we ook nog beroep doen op aggregatieoperatoren,
 zowel voor het combineren van verschillende similariteitsmaten als voor het ondersteunen van
-meerdere voorbeeld-afbeeldingen. 
+meerdere voorbeelden. 
 %\vspace{5mm}
 
 %\noindent {\bf\Large Trefwoorden}\\[1mm]
